# fast-semver

./: .gitignore  Cargo.toml  README.md  index.js  lib.d.ts  lib.js  package.json
.github/workflows/: CI.yml
__test__/: index.spec.mjs
benchmark/: bench.ts
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
