[package]
edition = "2021"
name = "fast-semver"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi3"] }
napi-derive = "2"
semver = "1"

[target.'cfg(not(target_os = "linux"))'.dependencies]
mimalloc-rust = "0.2"

[target.'cfg(all(target_os = "linux", not(all(target_env = "musl", target_arch = "aarch64"))))'.dependencies]
mimalloc-rust = { version = "0.2", features = ["local-dynamic-tls"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
